# aoc

./: .gitignore  README.md
2022/day1/cpp/: CMakeLists.txt  day1.cpp
2022/day1/py/: day1.py
2022/day2/cpp/: CMakeLists.txt  day2.cpp
2022/day2/py/: day2.py
2022/day3/cpp/: CMakeLists.txt  day3.cpp
2023/day1/cpp/src/: CMakeLists.txt  day1.cpp
2023/day2/py/: day2.py
2023/day4/: day4_partial.in
2023/day4/py/: day4.py
2024/day1/: CMakeLists.txt  day1.cpp  day1.py
